project mostly done. still need to fix - last game results not showing

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h2 {
 }
 
 .buttons:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 .rock {
@@ -49,4 +49,17 @@ h2 {
     background-size: 95px 95px;
     width: 100px;
     height: 100px;
+}
+
+img {
+    width: 30px;
+    height: 30px;
+}
+
+.test {
+    font-size: 24px;
+}
+
+#results {
+    font-size: 18px;
 }
